# selenium_screenshots

./: .coveragerc  .gitignore  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
src/selenium_screenshots/: __init__.py  additional.py  class_screenshots.py  exceptions.py  func_screenshot.py  main.py  skeleton.py
tests/: conftest.py  test_screenshots.py  test_skeleton.py
