[tool.poetry]
name = "selenium_screenshots"
version = "0.1.3"
description = "python package which helps to create many screenshots for selenium.webdriver"
authors = ["stanislav prokopyev"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/stas-prokopiev/selenium_screenshots"

[tool.poetry.dependencies]
python = "^3.7"
local-simple-database = "^0.1.10"
char = "^0.1.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
